montioring_deployment/configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${env}
    secretName: grafana-tls
  rules:
  - host: ${env}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
